Bug 759282 - Location bar should have the same horizontal spacing between the icon and text as the autocomplete popup. r=jaws
UltraBlame original commit: be6973c48222fda110e1d599deada3813eca6858

--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -11440,9 +11440,34 @@ height
 16px
 ;
 margin
+-
+top
 :
 1px
+;
+margin
+-
+bottom
+:
+1px
+;
+-
+moz
+-
+margin
+-
+start
+:
 3px
+;
+-
+moz
+-
+margin
+-
+end
+:
+2px
 ;
 list
 -
@@ -11483,6 +11508,52 @@ rect
 16px
 0
 )
+;
+}
+conditionalForwardWithUrlbar
++
+#
+urlbar
+-
+container
+>
+#
+urlbar
+>
+#
+identity
+-
+box
+>
+#
+identity
+-
+box
+-
+inner
+>
+#
+page
+-
+proxy
+-
+stack
+>
+#
+page
+-
+proxy
+-
+favicon
+{
+-
+moz
+-
+margin
+-
+end
+:
+1px
 ;
 }
 .
